[package]
name = "delta-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
arrow = "27"
chrono = "0.4"
# Taking the commit off main as of 2022-10-26
deltalake = { git = "https://github.com/delta-io/delta-rs", branch = "main"}
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "fs"] }
serde_json = "1"
structopt = "0.3.26"
